--- a/styles.css
+++ b/styles.css
@@ -16,4 +16,5 @@ html, body {
 #player {
     width: 100%;
     height: 100%;
+    transform-origin: center center; /* Asegura que las transformaciones se apliquen desde el centro */
 }
